--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
         <section class="secao__um">
             <textarea class="secao__um__texto" id="txt" spellcheck="false"
-             placeholder="Digite seu texto aqui.">
+             placeholder="Digite seu texto aqui." value="">
             </textarea>
             <div class="secao__um__parte__baixo">         
                 <div class="secao__um__parte__baixo__mensagem">
