--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             </div>
         </section>
         <section class="secao__dois">
-            <textarea class="secao__dois__texto" id="ext" spellcheck="false">                   
+            <textarea class="secao__dois__texto" id="ext" spellcheck="false" readonly>                   
             </textarea>
             <div class="imagem__sem__texto" id="imagem"></div>
             <textarea class="secao__dois__mensagem" id="secao__dois__mensagem__sem__texto"
-             spellcheck="false">                
+             spellcheck="false" readonly>                
             </textarea>
             <textarea class="secao__dois_mensagem__dois" id="secao__dois__mensagem__sem__texto__2"
-             spellcheck="false">
+             spellcheck="false" readonly>
             </textarea>
             <button onclick="copiar()" class="botao" id="copiar">
                 Copiar
